# mle-training

./: .gitignore  Makefile  README.md  env.yml  nonstandardcode.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst
src/: ingest_data.py  score.py  train.py  utils.py
src/my_ml_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/functional_tests/: test_installation.py  test_training.py
tests/unit_tests/: test_data_ingestion.py
