[metadata]
name = mle-training
version = 0.1
description = Modelling the data using Regression techniques
author = Mohan Singh
author_email = mohan.singh@tigeranalytics.com

[options]
packages = find:

[flake8]
max-line-length = 85
extend-ignore = E501, F401

[black]
line-length = 85
skip-string-normalization = true

[isort]
profile = black
line_length = 85
known_third_party = flask, requests  # Add your third-party packages here

[tool:pytest]
testpaths = tests
